# AI-Powered-Industrial-Inspection-System

./: .gitattributes  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  defect detection.md  defect_coordinates.csv  directory_flatter.py
assembly_verification_engine/src/: detector.rs  main.rs
backend/: CAMERA_MANAGEMENT.md  Cargo.toml
backend/src/: main.rs
compare/: Cargo.toml
compare/src/: compare_stage.rs  main.rs
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.css  App.jsx  index.css
main_engine/model/: memory_bank.npy
main_engine/pipe/: Cargo.toml
main_engine/pipe/calliberation/: Cargo.toml
main_engine/pipe/detect/: Cargo.toml
main_engine/pipe/detect/src/: contour.rs  edge_mask.rs
main_engine/pipe/io/src/: camera.rs  lib.rs  stage.rs  undistort.rs
main_engine/pipe/measurement/: Cargo.toml
main_engine/pipe/measurement/src/: lib.rs
main_engine/pipe/output/src/: display.rs
main_engine/pipe/pipe_core/src/: context.rs
main_engine/pipe/preprocess/: Cargo.toml
main_engine/pipe/python_bridge/: Cargo.toml
main_engine/pipe/qualify/: Cargo.toml
main_engine/pipe/src/: debug_stage.rs  main.rs
main_engine/py_engine/: box_tracker.py  heatmap.py  live_camera_async.py  preprocess.py
part_understanding_engine/: project.env
part_understanding_engine/part_capture_engine/: Cargo.toml
pipe/: Cargo.toml
pipe/calliberation/src/: caliberate.rs  detect.rs  lib.rs
pipe/detect/src/: lib.rs
pipe/io/: Cargo.toml
pipe/measurement/: Cargo.toml
pipe/measurement/src/: lib.rs
pipe/output/: Cargo.toml  lib.rs
pipe/output/src/: lib.rs  overlay.rs
pipe/pipe_core/: Cargo.toml
pipe/pipe_core/src/: error.rs  lib.rs  pipeline.rs  stage.rs
pipe/src/: debug_stage.rs  main.rs
py_engine/: preprocess.py
rust_engine/assembly_verification_engine/: Cargo.toml
src/: anomaly_scoring.py  augment.py  backbone.py  bbox.py  build_memory_bank.py  calibration.py  config.py  feature_extractor.py  fps.py  ingest_datasets.py  live_camera.py  live_camera_async.py  roi.py  temporal.py  test_single_image.py  utils.py  verify_dataset.py
src/aircraft/: aircraft_dataset.py  gradcam.py  (+3 more)
(+36 files in other folders)
