[package]
name = "compare"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
opencv = "0.98.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
pipe_core = { path = "../pipe/pipe_core" }
io = { path = "../pipe/io" }
detect = { path = "../pipe/detect" }
measurement = { path = "../pipe/measurement" }
calliberation = { path = "../pipe/calliberation" }
output = { path = "../pipe/output" }
base64 = "0.22"
